--- a/client/dedalo/core/page/css/main.css
+++ b/client/dedalo/core/page/css/main.css
@@ -19991,13 +19991,24 @@ body.inspector_resizing {
 .portal.view_default.edit > .list_body {
   position: relative;
   display: grid;
-  grid-template-rows: 1.65rem auto;
+  grid-template-rows: auto auto;
   height: fit-content;
   min-height: var(--content_data_min_height);
 }
 .component_portal.view_default.edit > .list_body .column_section_id,
 .portal.view_default.edit > .list_body .column_section_id {
   padding: unset;
+}
+.component_portal.view_default.edit > .list_body > .header_wrapper_list > .head_column:not(.with_sub_header),
+.portal.view_default.edit > .list_body > .header_wrapper_list > .head_column:not(.with_sub_header) {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  align-items: center;
+}
+.component_portal.view_default.edit > .list_body > .header_wrapper_list > .head_column:not(.with_sub_header) > .name,
+.portal.view_default.edit > .list_body > .header_wrapper_list > .head_column:not(.with_sub_header) > .name {
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 .component_portal.view_default.edit > .list_body .button_edit,
 .portal.view_default.edit > .list_body .button_edit {
@@ -20576,6 +20587,67 @@ body.inspector_resizing {
 .portal.view_line.search > .content_data {
   display: flex;
   align-items: baseline;
+}
+.wrapper_component.edit.view_line.portal > .content_data > .section_record.view_line {
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  min-height: 1.7rem;
+  margin: 0px 0px 1px 0px;
+  padding: 0.1rem 0.4rem 0.1rem 0.35rem;
+  gap: 0.5rem;
+  border-radius: 0.25rem;
+}
+.wrapper_component.edit.view_line.portal > .content_data > .section_record.view_line:hover {
+  background-color: var(--color_grey_15);
+}
+.wrapper_component.edit.view_line.portal > .content_data > .section_record.view_line > .column.column_section_id {
+  display: inline-flex;
+  flex-direction: row;
+  align-items: center;
+  width: auto;
+  min-width: 0px;
+  min-height: 0px;
+  margin: 0px;
+  padding: 0px;
+  gap: 0.15rem;
+  flex: 0 0 auto;
+  order: 1;
+}
+.wrapper_component.edit.view_line.portal > .content_data > .section_record.view_line > .column.column_section_id > .button_edit {
+  width: auto;
+  margin: 0px;
+  padding: 0px;
+}
+.wrapper_component.edit.view_line.portal > .content_data > .section_record.view_line > .column.column_section_id .button.tree {
+  margin: 0px;
+}
+.wrapper_component.edit.view_line.portal > .content_data > .section_record.view_line > .column:not(.column_section_id):not(.column_remove):not(.column_component_dataframe) {
+  flex: 1 1 auto;
+  order: 2;
+  display: flex;
+  align-items: baseline;
+  gap: 0.3rem;
+  min-width: 0px;
+  margin: 0px;
+  padding: 0px;
+  overflow: hidden;
+}
+.wrapper_component.edit.view_line.portal > .content_data > .section_record.view_line > .column:not(.column_section_id):not(.column_remove):not(.column_component_dataframe) > .wrapper_component {
+  flex: 0 0 auto;
+}
+.wrapper_component.edit.view_line.portal > .content_data > .section_record.view_line > .column:not(.column_section_id):not(.column_remove):not(.column_component_dataframe) > .component_portal {
+  flex: 0 0 auto;
+  margin-left: auto;
+  padding-left: 0.5rem;
+}
+.wrapper_component.edit.view_line.portal > .content_data > .section_record.view_line > .column.column_remove {
+  order: 3;
+  flex: 0 0 auto;
+  margin-left: auto;
+  min-height: 0px;
+  padding: 0px;
+  background-color: transparent;
 }
 /**
 * view_tree_portal
